--- a/domainpage.html
+++ b/domainpage.html
@@ -35,12 +35,11 @@
 </head>
 <body>
     <header>
-        <h1>Simple Webpage</h1>
+        <h1>Webpage</h1>
     </header>
     <div class="container">
-        <h2>Welcome to My Simple Webpage</h2>
-        <p>This is a simple webpage created using HTML and CSS.</p>
-        <p>Feel free to modify and expand upon it!</p>
+        <h2>Hey There! </h2>
+        <h3>The page you are looking for does not exist as of now.</h3>
     </div>
 </body>
 </html>
